# mips_simulator

./: .gitignore  CMakeLists.txt  error_handling.c  error_handling.h  ir.c  ir.h  isa_mips.c  lexer.c  lexer.h  line.c  line.h  main.c  parser.c  parser.h  pass1.c  pass1.h  preprocess.c  preprocess.h  regmap.c  symtab.c  symtab.h
include/asm/: pass1.h
include/core/: isa_mips.h  regmap.h  symtab.h
include/front/: lexer.h  parser.h
src/asm/: pass1.c
src/core/: error_handling.c  ir.c  isa_mips.c  line.c  regmap.c  symtab.c
src/front/: lexer.c  parser.c  preprocess.c
tests/unit_tests/: CMakeLists.txt  run.c  run_app  run_app_test  test.h  test_lexer.c  test_parser.c  test_pass1.c  test_preprocess.c
